--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <!-- debut de la section-aside-->
 
         <section>
-            <div class ="container-fluid">
+            <div class ="container">
                  <div class="row">
                            <div class="separation"></div>
-                        </div>
+                </div>
                 <div class="row">
           
 
