--- a/index.html
+++ b/index.html
@@ -23,25 +23,23 @@
 <body>
 
     <header>
+        
         <!-- Barre de navigation -->
-
-        <nav class="navbar navbar-inverse">
-            <div class="container-fluid-1">
-                <div class="navbar">
-                    <ul class="nav navbar-nav">
-                        <li><a href="#" class="nav-links">HOME</a></li>
-                        <li><a href="#" class="nav-links">FEATURES</a></li>
-                        <li><a href="#" class="nav-links">STYLES</a></li>
-                        <li><a href="#" class="nav-links">TRAVEL</a></li>
-                        <li><a href="#" class="nav-links">PORTFOLIO</a></li>
-                        <li><a href="#" class="nav-links">SHOP</a></li>
-                        <li><a href="#" class="nav-links">HEADERS</a></li>
-                        <li><a href="#" class="nav-links">CONTACT ME</a></li>
-                        <li><a href="#" class="nav-links">PURCHASSE</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+       
+            <nav class="menu">
+                <ul class="navbar">
+                    <a href="#" class="nav-links-current">Home</a>
+                    <a href="#" class="nav-links">FEATURES</a>
+                    <a href="#" class="nav-links">STYLE</a>
+                    <a href="#" class="nav-links">TRAVEL</a>
+                    <a href="#" class="nav-links">PORTOFOLIO</a>
+                    <a href="#" class="nav-links">SHOP</a>
+                    <a href="#" class="nav-links">HEADERS</a>
+                    <a href="#" class="nav-links">CONTACT ME</a>
+                    <a href="#" class="nav-links">PURCHASE</a>
+                </ul>
+            </nav>
+        <!-- // Fin barre de navigation-->
 
 
 
