modification logo et copyright dans le footer

--- a/index.html
+++ b/index.html
@@ -412,10 +412,10 @@
 
 
 
-                <div class="logoCopyrightFooter">
-                    <div class="logoFooter col-lg-12">
+                <div class="logoCopyrightFooter col-lg-12">
+                    <div class="logoFooter  ">
                         <a href="#" alt="site">
-                            <img src="assets\images\logo-f.png" />
+                            <img class="img-responsive" src="assets\images\logo-f.png" />
                         </a>
                     </div>
 
