modification logo et copyright dans le footer

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     <h4 class="titleinsta">ABOUT ME</h4>
 
                     <div class="imageabout">
-                        <img src="assets\images\about.jpg" alt="about" />
+                        <img class="img-responsive" src="assets\images\about.jpg" alt="about" />
                     </div>
                     <p>Hi there, I'm Marina - a girl love fashion and love to express herself through style and clothes. I hope my style will be the inspirations for girls around the world.
                     </p>
@@ -250,7 +250,7 @@
 
                     <div class="row ">
                         <a href="#">
-                            <img src="assets\images\mom-daughter-2.jpg" alt="about" />
+                            <img class="img-responsive" src="assets\images\mom-daughter-2.jpg" alt="about" />
                         </a>
                         <div class="titlephoto">
                             <a href="#">
@@ -265,7 +265,7 @@
 
                     <div class="row">
                         <a href="#">
-                            <img src="assets\images\closet-1170x1560.jpg" alt="about" />
+                            <img clas="img-responsive" src="assets\images\closet-1170x1560.jpg" alt="about" />
                         </a>
                         <div class="titlephoto">
                             <a href="#">
@@ -281,7 +281,7 @@
 
                     <div class="row">
                         <a href="#">
-                            <img src="assets\images\styled2.jpg" alt="about" />
+                            <img class="img-responsive" src="assets\images\styled2.jpg" alt="about" />
                         </a>
                         <div class="titlephoto">
                             <a href="#">
@@ -298,7 +298,7 @@
 
                     <div class="imageinstag">
                         <a href="#">
-                            <img src="assets\images\beauty-makeup.jpg" alt="about" />
+                            <img class="img-responsive" src="assets\images\beauty-makeup.jpg" alt="about" />
                         </a>
                     </div>
                 </aside>
@@ -320,42 +320,42 @@
                 <ul class="imageonInstag ">
                     <li>
                         <a href="#">
-                            <img class="imageInstagram" src="assets\images\bag.jpg" />
+                            <img class="imageInstagram img-responsive" src="assets\images\bag.jpg" />
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img class="imageInstagram" src="assets\images\beauty-makeup.jpg" />
+                            <img class="imageInstagram img-responsive" src="assets\images\beauty-makeup.jpg" />
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img class="imageInstagram" src="assets\images\fashion-girl.jpg" />
+                            <img class="imageInstagram img-responsive" src="assets\images\fashion-girl.jpg" />
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img class="imageInstagram" src="assets\images\jean-1170x780.jpg" />
+                            <img class="imageInstagram img-responsive" src="assets\images\jean-1170x780.jpg" />
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img class="imageInstagram" src="assets\images\mom-daughter.jpg" />
+                            <img class="imageInstagram img-responsive" src="assets\images\mom-daughter.jpg" />
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img class="imageInstagram" src="assets\images\mom-daughter-2.jpg" />
+                            <img class="imageInstagram img-responsive" src="assets\images\mom-daughter-2.jpg" />
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img class="imageInstagram" src="assets\images\photography.jpg" />
+                            <img class="imageInstagram img-responsive" src="assets\images\photography.jpg" />
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img class="imageInstagram" src="assets\images\styled2.jpg" />
+                            <img class="imageInstagram img-responsive" src="assets\images\styled2.jpg" />
                         </a>
                     </li>
                 </ul>
@@ -412,8 +412,8 @@
 
 
 
-                <div class="logoCopyrightFooter col-lg-12">
-                    <div class="logoFooter  ">
+                <div class="logoCopyrightFooter">
+                    <div class="logoFooter col-lg-12 ">
                         <a href="#" alt="site">
                             <img class="img-responsive" src="assets\images\logo-f.png" />
                         </a>
