rajout de la pagination

--- a/index.html
+++ b/index.html
@@ -343,7 +343,14 @@
 
 
     <!-- // Fin de la partie article-->
-
+    <!-- pagination-->
+    
+		<div class="row"> 
+			<ul class="pagination">
+				<li><a class="active" href="#">1</a></li>
+				<li><a  href="#">2</a></li>
+				<li><a  href="#">></a></li>
+			</ul>
     <!-- debut de la section-aside: olivier-->
 
 
